--- a/app/src/main/res/layout/navigation_menu_header.xml
+++ b/app/src/main/res/layout/navigation_menu_header.xml
@@ -18,7 +18,8 @@
         android:innerRadius="0dp"
         android:shape="ring"
         app:cardCornerRadius="40dp"
-        android:thicknessRatio="1.9">
+        android:thicknessRatio="1.9"
+        android:layout_marginBottom="5dp">
 
         <ImageView
             android:id="@+id/img_user"
@@ -39,6 +40,7 @@
         <TextView
             android:id="@+id/tv_nav_header_name"
             android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
 
