--- a/app/src/main/res/layout/navigation_menu_header.xml
+++ b/app/src/main/res/layout/navigation_menu_header.xml
@@ -10,10 +10,10 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view_user_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:elevation="12dp"
-        android:id="@+id/card_view_image"
         android:layout_centerHorizontal="true"
         android:innerRadius="0dp"
         android:shape="ring"
@@ -28,9 +28,6 @@
             android:src="@drawable/noodles" />
 
     </android.support.v7.widget.CardView>
-
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
