--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -1,127 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:addStatesFromChildren="true"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent">
 
-
-    <android.support.design.widget.TextInputLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        >
+        android:layout_height="match_parent"
+        android:addStatesFromChildren="true"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_game_name"
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Game name"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:layout_margin="16dp">
+
+            <EditText
+                android:id="@+id/et_game_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Game name"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:padding="8dp"
+            android:text="Sport"
+            android:textSize="18dp" />
+
+        <Spinner
+            android:id="@+id/spn_game_sport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:entries="@array/sports"
+            android:padding="8dp"
+
+            >
+
+        </Spinner>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:padding="8dp"
+            android:text="Main Team"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/tv_main_team"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:padding="8dp"
+            android:text="Pick your team"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:padding="8dp"
+            android:text="Challanged Team"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/tv_game_challenged_team"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="8dp"
+            android:text="Pick a team to challenge"
+            android:textSize="18sp"
+
             />
-    </android.support.design.widget.TextInputLayout>
 
-    <Spinner
-        android:id="@+id/spn_game_sport"
-        android:entries="@array/sports"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:padding="8dp"
+            android:text="Start Date"
+            android:textSize="18dp" />
 
-    </Spinner>
-
-
-    <TextView
-        android:id="@+id/tv_main_team"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pick your team"
-        android:textSize="18sp"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-        android:focusable="true"
-        android:clickable="true"
-        android:focusableInTouchMode="true"
-        />
-
-    <TextView
-        android:id="@+id/tv_game_challenged_team"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pick a team to challenge"
-        android:textSize="18sp"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-
-        />
-    <TextView
-        android:id="@+id/tv_game_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pick a date"
-        android:textSize="18sp"
-        android:padding="8dp"
-        android:layout_margin="16dp"
+        <TextView
+            android:id="@+id/tv_game_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="8dp"
+            android:text="Pick a date"
+            android:textSize="18sp"
 
 
-
-        />
-
-    <TextView
-        android:id="@+id/tv_game_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pick a time"
-        android:textSize="18sp"
-        android:padding="8dp"
-
-        android:layout_margin="16dp"
-        />
-    <Button
-        android:id="@+id/btn_game_location"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:drawableLeft="@drawable/ic_add_location_black_24dp"
-        android:drawablePadding="8dp"
-        android:text="Add venue"
-        android:textSize="18sp"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-        />
+            />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:padding="8dp"
+            android:text="Start Time"
+            android:textSize="18dp" />
 
-    <Button
-        android:layout_width="0dp"
-        android:id="@+id/btn_cancel_create_game"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:layout_weight="1"
-        />
+        <TextView
+            android:id="@+id/tv_game_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="8dp"
+            android:text="Pick a time"
 
-    <Button
-        android:layout_width="0dp"
-        android:id="@+id/btn_confirm_create_game"
-        android:layout_height="50dp"
-        android:layout_weight="1"
-        android:text="Confirm"
-        />
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_game_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:drawableLeft="@drawable/ic_add_location_black_24dp"
+            android:drawablePadding="8dp"
+            android:padding="8dp"
+            android:singleLine="true"
+            android:text="Add venue"
+            android:textSize="18sp" />
 
 
     </LinearLayout>
-
-
-</LinearLayout>
+</ScrollView>
