--- a/app/src/main/res/layout/activity_team_info.xml
+++ b/app/src/main/res/layout/activity_team_info.xml
@@ -64,20 +64,49 @@
         />
 
         <TextView
-            android:id="@+id/tv_win_loss_ratio"
+            android:id="@+id/tv_info_team_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:text="Win/Loss Ratio:" />
 
+
     <LinearLayout
-        android:id="@+id/ll_info_team_players"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="15dp"
+
+        android:text="Players"
+        />
+
+        <TextView
+            android:id="@+id/tv_info_team_remove_players"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="180dp"
+            android:visibility="gone"
+
+            android:text="remove selected"
+            />
 
 
     </LinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_team_info"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
+        android:layout_weight="20"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorLightBackground"/>
+
 
 
 </LinearLayout>
