--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -3,10 +3,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
+    android:background="@color/colorLightBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="12dp"
+    android:padding="16dp"
 
     >
 
@@ -47,7 +47,9 @@
         <CheckBox
             android:id="@+id/check_list"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            />
 
 
 </LinearLayout>
