--- a/app/src/main/res/layout/activity_team_info.xml
+++ b/app/src/main/res/layout/activity_team_info.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v4.widget.NestedScrollView
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -108,5 +114,6 @@
         android:background="@color/colorLightBackground"/>
 
 
-
 </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
+
