--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -27,6 +27,10 @@
             android:title="Create Game" />
 
         <item
+            android:id="@+id/nav_menu_requests"
+            android:title="Requests" />
+
+        <item
             android:id="@+id/nav_menu_logout"
             android:title="Logout"/>
 
