--- a/app/src/main/res/layout/activity_edit_player_info.xml
+++ b/app/src/main/res/layout/activity_edit_player_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,11 +10,40 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="508dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="165dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view_user_image_edit"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"
+            android:elevation="12dp"
+            android:innerRadius="0dp"
+            android:shape="ring"
+            android:thicknessRatio="1.9">
+
+            <ImageView
+                android:id="@+id/img_user_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/noodles" />
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="32dp">
 
         <TextView
             android:id="@+id/tv_player_name"
@@ -105,9 +135,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="Edit"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="5dp"
-                tools:ignore="MissingConstraints" />
+                tools:layout_editor_absoluteY="5dp" />
 
             <Button
                 android:id="@+id/btn_confirm_edit_info"
@@ -115,9 +145,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="confirm"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="136dp"
-                tools:layout_editor_absoluteY="5dp"
-                tools:ignore="MissingConstraints"/>
+                tools:layout_editor_absoluteY="5dp" />
 
             <Button
                 android:id="@+id/btn_cancel_edit_info"
@@ -125,9 +155,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="cancel"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="256dp"
-                tools:layout_editor_absoluteY="5dp"
-                tools:ignore="MissingConstraints" />
+                tools:layout_editor_absoluteY="5dp" />
 
 
         </android.support.constraint.ConstraintLayout>
