--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -9,12 +9,14 @@
     android:padding="16dp"
 
     >
-
-    <ImageView
-        android:id="@+id/img_user"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="#16000000" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/img_player_card_profile_image"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/ic_person_black_100dp"
+        app:civ_border_width="1dp"
+        app:civ_border_color="#FF000000"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -26,29 +28,39 @@
 
 
         <TextView
-            android:id="@+id/item_txt_title"
+            android:id="@+id/tv_player_card_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
-            android:textColor="#212121"
-            android:textSize="14dp" />
+            android:text="The name of the player"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/item_txt_message"
+            android:id="@+id/tv_player_card_handel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text=""
-            android:textColor="#727272"
+            android:text="@handel"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/tv_player_card_team"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Team"
+            android:textColor="@color/colorPrimary"
             android:textSize="14dp" />
 
     </LinearLayout>
 
         <CheckBox
-            android:id="@+id/check_list"
+            android:id="@+id/chk_player_card_selection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
+            android:buttonTint="@color/colorPrimary"
             />
 
 
