--- a/app/src/main/res/layout/team_recycler_list.xml
+++ b/app/src/main/res/layout/team_recycler_list.xml
@@ -45,7 +45,7 @@
     </LinearLayout>
 
         <CheckBox
-            android:id="@+id/check_list"
+            android:id="@+id/chk_player_card_selection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
