--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -55,13 +55,31 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:layout_gravity="top"
+        android:text="Pending"/>
+
         <CheckBox
             android:id="@+id/chk_player_card_selection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
             android:buttonTint="@color/colorPrimary"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="8dp"
             />
+
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
