--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -61,6 +61,7 @@
         android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_player_card_teamSate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
