--- a/app/src/main/res/layout/activity_edit_player_info.xml
+++ b/app/src/main/res/layout/activity_edit_player_info.xml
@@ -1,56 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:orientation="vertical"
     >
 
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="16dp">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view_user_image_edit"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="5dp"
-            android:elevation="12dp"
-            android:innerRadius="0dp"
-            android:shape="ring"
-            android:thicknessRatio="1.9">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/ic_delete" />
 
-            <ImageView
-                android:id="@+id/img_user_edit"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/noodles" />
-        </android.support.v7.widget.CardView>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="550dp"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/checkbox_on_background" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/img_player_card_profile_image_edit"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/noodles"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"
+            android:layout_marginStart="220dp"/>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="352dp"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="83dp">
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="100dp"
+        android:layout_marginTop="20dp">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,8 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
-                    android:textSize="18dp"
-                    />
+                    android:textSize="18dp" />
 
                 <TextView
                     android:id="@+id/tv_player_handle"
@@ -147,34 +153,12 @@
                         android:id="@+id/btn_edit_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
+                        android:layout_marginStart="250dp"
+                        android:layout_marginTop="5dp"
                         android:text="Edit"
                         tools:ignore="MissingConstraints"
                         tools:layout_editor_absoluteX="16dp"
                         tools:layout_editor_absoluteY="5dp" />
-
-                    <Button
-                        android:id="@+id/btn_confirm_edit_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="confirm"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="132dp"
-                        tools:layout_editor_absoluteY="5dp"
-                        android:layout_marginStart="35dp"
-                        android:layout_marginTop="5dp"/>
-
-                    <Button
-                        android:id="@+id/btn_cancel_edit_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="40dp"
-                        android:layout_marginTop="5dp"
-                        android:text="cancel"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="256dp"
-                        tools:layout_editor_absoluteY="5dp"
-                        />
                 </LinearLayout>
 
             </LinearLayout>
@@ -182,4 +166,4 @@
 
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
