--- a/app/src/main/res/layout/navigation_menu_header.xml
+++ b/app/src/main/res/layout/navigation_menu_header.xml
@@ -21,11 +21,14 @@
         android:thicknessRatio="1.9"
         android:layout_marginBottom="5dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/img_user"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/noodles" />
+            android:layout_width="80dp"
+            android:layout_height="90dp"
+            android:src="@drawable/noodles"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"/>
 
     </android.support.v7.widget.CardView>
 
