--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -2,61 +2,18 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:addStatesFromChildren="true"
-        android:background="@color/colorPrimary"
         android:orientation="vertical">
 
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp">
-
-            <EditText
-                android:id="@+id/et_game_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Game name"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp" />
-        </android.support.design.widget.TextInputLayout>
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:padding="8dp"
-            android:text="Sport"
-            android:textSize="18dp" />
-
-        <Spinner
-            android:id="@+id/spn_game_sport"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:entries="@array/sports"
-            android:padding="8dp"
-
-            >
-
-        </Spinner>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:padding="8dp"
-            android:text="Main Team"
-            android:textSize="18dp" />
-
-        <TextView
-            android:id="@+id/tv_main_team"
+            android:id="@+id/tv_create_game_main_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -65,77 +22,76 @@
             android:focusableInTouchMode="true"
             android:padding="8dp"
             android:text="Pick your team"
+            android:textColor="@color/textLight"
             android:textSize="18sp" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:padding="8dp"
-            android:text="Challanged Team"
-            android:textSize="18dp" />
-
-        <TextView
-            android:id="@+id/tv_game_challenged_team"
+            android:id="@+id/tv_create_game_challenged_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="8dp"
             android:text="Pick a team to challenge"
+            android:textColor="@color/textLight"
             android:textSize="18sp"
 
             />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:padding="8dp"
-            android:text="Start Date"
-            android:textSize="18dp" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_game_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            android:text="Pick a date"
-            android:textSize="18sp"
+            <TextView
+                android:id="@+id/tv_create_game_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:padding="8dp"
+                android:text="Pick a date"
+                android:textColor="@color/textLight"
+                android:textSize="18sp"
 
 
-            />
+                />
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:padding="8dp"
-            android:text="Start Time"
-            android:textSize="18dp" />
+            <TextView
+                android:id="@+id/tv_create_game_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:gravity="end"
+                android:padding="8dp"
+                android:text="Pick a time"
+                android:textColor="@color/textLight"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tv_game_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            android:text="Pick a time"
 
-            android:textSize="18sp" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_game_location"
+        <Spinner
+            android:id="@+id/spn_create_game_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:drawableLeft="@drawable/ic_add_location_black_24dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:entries="@array/sports">
+
+        </Spinner>
+
+        <TextView
+            android:id="@+id/tv_create_game_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:drawablePadding="8dp"
             android:padding="8dp"
             android:singleLine="true"
             android:text="Add venue"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textColor="@color/textLight"/>
 
 
     </LinearLayout>
