Add font size and padding margins in dimens.xml

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,36 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name = "activity_horizontal_margin"> 16dp </dimen>
+    <dimen name = "activity_vertical_margin"> 16dp </dimen>
 
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name = "navigation_drawer_width"> 240dp </dimen>
+
+    <!-- Input Text (I think Edit Text) -->
+    <dimen name = "input_text_padding_top"> 8dp </dimen>
+    <dimen name = "input_text_padding_bottom"> 16dp </dimen>
+
+    <!-- Placeholder Text (Hint Text) -->
+    <dimen name = "input_text_hint_padding_above_label"> 16dp </dimen>
+    <dimen name = "input_text_hint_padding_above_text"> 8dp </dimen>
+    <dimen name = "input_text_hint_padding_below_text"> 8dp </dimen>
+
+    <!-- Cards (elevation) -->
+    <dimen name = "card_raised_elevation"> 2dp </dimen>
+
+    <!-- Fonts Sizes -->
+
+    <!-- App Bar -->
+    <dimen name = "font_size_app_bar"> 20sp </dimen>
+
+    <!-- Buttons -->
+    <dimen name = "font_size_button_english"> 14sp </dimen>
+
+    <!-- Subheading -->
+    <dimen name = "font_size_subheading_english"> 16sp </dimen>
+
+    <!-- Body -->
+    <dimen name = "font_size_body_english"> 14sp </dimen>
+
 </resources>
