Add more to dimens.xml (For Buttons and TextView) and replace dimens with new ones in activity_create_game.xml and activity_create_team.xml

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,13 @@
     <dimen name = "input_text_padding_top"> 8dp </dimen>
     <dimen name = "input_text_padding_bottom"> 16dp </dimen>
 
+    <!-- Text View (I think) -->
+    <dimen name = "text_view_padding_height"> 56dp </dimen>
+    <dimen name = "text_view_padding_corner_radius"> 4dp </dimen>
+    <dimen name = "text_view_padding_left"> 16dp </dimen>
+    <dimen name = "text_view_padding_right"> 16dp </dimen>
+    <dimen name = "text_view_padding_above_label"> 8dp </dimen>
+
     <!-- Placeholder Text (Hint Text) -->
     <dimen name = "input_text_hint_padding_above_label"> 16dp </dimen>
     <dimen name = "input_text_hint_padding_above_text"> 8dp </dimen>
@@ -19,8 +26,13 @@
     <!-- Cards (elevation) -->
     <dimen name = "card_raised_elevation"> 2dp </dimen>
 
-    <!-- Fonts Sizes -->
+    <!-- All about the Buttons -->
+    <dimen name = "button_text"> 14pt Roboto medium </dimen>
+    <dimen name = "button_padding_height"> 36dp </dimen>
+    <dimen name = "button_padding_text_left_right"> 16dp </dimen>
+    <dimen name = "button_padding_corner_radius"> 2dp </dimen>
 
+    <!-- Fonts Sizes -->
     <!-- App Bar -->
     <dimen name = "font_size_app_bar"> 20sp </dimen>
 
