--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -3,13 +3,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary" >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:addStatesFromChildren="true"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
 
         <TextView
@@ -20,40 +20,38 @@
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:padding="8dp"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right"
             android:text="Pick your team"
             android:textColor="@color/textLight"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_size_body_english" />
 
         <TextView
             android:id="@+id/tv_create_game_challenged_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:padding="8dp"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right"
             android:text="Pick a team to challenge"
             android:textColor="@color/textLight"
-            android:textSize="18sp"
-
-            />
+            android:textSize="@dimen/font_size_body_english" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/tv_create_game_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:padding="8dp"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right"
                 android:text="Pick a date"
                 android:textColor="@color/textLight"
-                android:textSize="18sp"
-
-
-                />
+                android:textSize="@dimen/font_size_body_english" />
 
 
             <TextView
@@ -62,10 +60,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:gravity="end"
-                android:padding="8dp"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right"
                 android:text="Pick a time"
                 android:textColor="@color/textLight"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_size_body_english" />
 
 
         </LinearLayout>
@@ -77,7 +76,9 @@
             android:layout_margin="16dp"
             android:paddingBottom="16dp"
             android:paddingTop="16dp"
-            android:entries="@array/sports">
+            android:entries="@array/sports"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right" >
 
         </Spinner>
 
@@ -87,11 +88,12 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:drawablePadding="8dp"
-            android:padding="8dp"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right"
             android:singleLine="true"
             android:text="Add venue"
-            android:textSize="18sp"
-            android:textColor="@color/textLight"/>
+            android:textSize="@dimen/font_size_body_english"
+            android:textColor="@color/textLight" />
 
 
     </LinearLayout>
