--- a/app/src/main/res/layout/activity_edit_player_info.xml
+++ b/app/src/main/res/layout/activity_edit_player_info.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    >
+    android:background="@color/colorPrimary" >
 
 
     <LinearLayout
@@ -16,7 +15,7 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="8dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints" >
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_view_user_image_edit"
@@ -27,7 +26,7 @@
             android:elevation="12dp"
             android:innerRadius="0dp"
             android:shape="ring"
-            android:thicknessRatio="1.9">
+            android:thicknessRatio="1.9" >
 
             <ImageView
                 android:id="@+id/img_user_edit"
@@ -46,16 +45,16 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="83dp">
+        tools:layout_editor_absoluteY="83dp" >
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical" >
 
                 <TextView
                     android:id="@+id/tv_player_name"
@@ -71,8 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
-                    android:textSize="18dp"
-                    />
+                    android:textSize="18dp" />
 
                 <TextView
                     android:id="@+id/tv_player_handle"
@@ -141,7 +139,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal" >
 
                     <Button
                         android:id="@+id/btn_edit_info"
@@ -162,7 +160,7 @@
                         tools:layout_editor_absoluteX="132dp"
                         tools:layout_editor_absoluteY="5dp"
                         android:layout_marginStart="35dp"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp" />
 
                     <Button
                         android:id="@+id/btn_cancel_edit_info"
@@ -173,8 +171,7 @@
                         android:text="cancel"
                         tools:ignore="MissingConstraints"
                         tools:layout_editor_absoluteX="256dp"
-                        tools:layout_editor_absoluteY="5dp"
-                        />
+                        tools:layout_editor_absoluteY="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
