Replace dimens in activity_edit_player_info.xml, activity_login.xml and activity_manager_registration.xml

--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -29,7 +29,9 @@
         android:inputType="textPersonName"
         android:layout_marginStart="80dp"
         android:layout_marginBottom="20dp"
-        android:hint="Team Sport" />
+        android:hint="Team Sport"
+        android:paddingTop="@dimen/input_text_padding_top"
+        android:paddingBottom="@dimen/input_text_padding_bottom" />
 
 
     <TextView
